--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "text-splitter",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
