--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "~4.0.0",
-    "body-parser": "~1.0.0"
+    "body-parser": "~1.0.0",
+    "monk": "*",
+    "jade": "*"
   }
 }
